--- a/src/styles/SingleCompanyinfo.css
+++ b/src/styles/SingleCompanyinfo.css
@@ -21,7 +21,7 @@
 }
 
 .details-infos {
-  background-color: #1758A0;
+  background-color: #1758a0;
   color: white;
   padding: 5px;
   display: flex;
@@ -53,7 +53,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: #1758A0;
+  background-color: #1758a0;
 }
 
 a {
