--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -10,7 +10,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
-  border: 1px solid #00385d;
+  border: 1px solid #4369b2;
   width: 100%;
   height: 150px;
 }
@@ -30,6 +30,7 @@
   padding-top: 28px;
   color: white;
   align-items: center;
+  text-decoration: none;
 }
 
 .name,
