--- a/src/styles/HomePage.css
+++ b/src/styles/HomePage.css
@@ -1,8 +1,8 @@
 .home-page {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  margin-right: 10px;
-  margin-left: 5px;
+  width: 100%;
+  font-family: 'Lato', sans-serif;
 }
 
 .company {
@@ -13,6 +13,8 @@
   border: 1px solid #4369b2;
   width: 100%;
   height: 150px;
+  font-family: 'Lato', sans-serif;
+  text-decoration: none;
 }
 
 .arrow {
@@ -30,12 +32,14 @@
   padding-top: 28px;
   color: white;
   align-items: center;
+  font-family: 'Lato', sans-serif;
 }
 
 .name {
   padding: 0;
   margin: 0;
   text-decoration: none;
+  font-family: 'Lato', sans-serif;
 }
 
 .symbol {
@@ -48,4 +52,5 @@
   padding: 0;
   margin: 0;
   text-decoration: none;
+  font-family: 'Lato', sans-serif;
 }
